--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
 header h1 {
   font-size: 2.5em;
   padding-left: 30px;
-  margin-bottom: 0; }
+  margin-bottom: 15px; }
 
 nav ul {
   list-style-type: none;
@@ -21,11 +21,15 @@ nav ul {
   margin: 0; }
 
 nav li {
-  font-size: 1.5em;
+  font-size: 1.3em;
   display: inline-block;
-  padding: 20px 30px; }
+  padding: 10px 30px 15px 30px; }
+  nav li:hover {
+    background-color: gray; }
 
 nav a {
+  font-weight: bold;
+  text-decoration: none;
   color: white; }
 
 main {
@@ -51,6 +55,8 @@ article img {
   margin-bottom: -500px; }
 
 footer {
-  padding: 2em; }
+  color: white;
+  padding: 2em;
+  background-color: gray; }
 
 /*# sourceMappingURL=style.css.map */
