--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@ header {
 header h1 {
     font-size:2.5em;
     padding-left:30px;
-    margin-bottom: 0;
+    margin-bottom: 15px;
 }
 
 nav ul {
@@ -25,12 +25,17 @@ nav ul {
 }
 
 nav li {
-    font-size:1.5em;
+    font-size:1.3em;
     display: inline-block;
-    padding: 20px 30px;
+    padding: 10px 30px 15px 30px;
+    &:hover {
+        background-color:gray;
+    }
 }
 
 nav a {
+    font-weight: bold;
+    text-decoration: none;
     color: white;
 }
 
@@ -63,5 +68,7 @@ article img {
 }
 
 footer {
+    color: white;
     padding: 2em;
+    background-color: gray;
 }
