--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,5 @@
+$standard-padding: 2em;
+
 body {
     margin: 0;
     padding: 0;
@@ -8,7 +10,7 @@ body {
 
 header {
     background: black;
-    padding-top:2em;
+    padding-top:$standard-padding;
     color: white;
 }
 
@@ -41,13 +43,13 @@ nav a {
 
 main {
     display: flex;
-    flex-direction:row;
-    padding: 2em;
+    flex-flow:row;
+    padding:$standard-padding;
 }
 
 article {
     width: 66.6%;
-    padding-right: 2em;
+    padding-right:$standard-padding;
 }
 
 aside {
@@ -64,11 +66,38 @@ img {
 }
 
 article img {
-    margin-bottom: -500px;
+    margin-bottom: -50%;
 }
 
 footer {
     color: white;
-    padding: 2em;
+    padding:$standard-padding;
     background-color: gray;
 }
+
+@media all and (max-width: 800px) {
+    header {
+        text-align: center;
+    }
+    header h1 {
+        padding: 0;
+    }
+    nav li {
+        display: block;
+    }
+    main {
+        flex-wrap: wrap;
+    }
+    figure {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    article h2 {
+        text-align: center;
+    }
+    article { 
+        width: 100%;
+        padding: 0;
+    }
+    aside { width: 100%; }
+  }
