refactored scss code to use variables, mixins and nesting

--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ header h1 {
   margin-bottom: 15px; }
 
 nav ul {
-  list-style-type: none;
+  margin: 0;
   padding: 0;
-  margin: 0; }
+  list-style-type: none; }
 
 nav li {
   font-size: 1.3em;
@@ -50,9 +50,8 @@ img {
 .img-container {
   display: block;
   overflow: hidden; }
-
-article img {
-  margin-bottom: -50%; }
+  .img-container img {
+    margin-bottom: -50%; }
 
 footer {
   color: white;
@@ -62,28 +61,22 @@ footer {
 @media all and (max-width: 800px) {
   header {
     text-align: center; }
-
-  header h1 {
-    padding: 0; }
-
-  nav li {
-    display: block; }
+    header h1 {
+      padding: 0; }
+    header nav li {
+      display: block; }
 
   main {
     flex-wrap: wrap; }
-
-  figure {
-    margin-left: 0;
-    margin-right: 0; }
-
-  article h2 {
-    text-align: center; }
-
-  article {
-    width: 100%;
-    padding: 0; }
-
-  aside {
-    width: 100%; } }
+    main article {
+      width: 100%;
+      padding: 0; }
+      main article h2 {
+        text-align: center; }
+    main figure {
+      margin-left: 0;
+      margin-right: 0; }
+    main aside {
+      width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
