--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ article {
   width: 66.6%;
   padding-right: 2em; }
 
+.main-index article {
+  margin: 0;
+  padding: 0;
+  width: 100%; }
+
 aside {
   width: 33.3%; }
 
