--- a/style.css
+++ b/style.css
@@ -41,10 +41,24 @@ article {
   width: 66.6%;
   padding-right: 2em; }
 
+.main-index section {
+  display: flex;
+  flex-flow: row wrap; }
 .main-index article {
   margin: 0;
   padding: 0;
   width: 100%; }
+.main-index figure {
+  margin: 0;
+  padding: 0;
+  padding-right: 2em;
+  width: 40%;
+  height: 300px;
+  overflow: hidden; }
+.main-index .news-preview-text {
+  width: calc(60% - 2em); }
+  .main-index .news-preview-text button:hover {
+    cursor: pointer; }
 
 aside {
   width: 33.3%; }
