removed whitespace in nav, added transition to links

--- a/style.css
+++ b/style.css
@@ -21,12 +21,13 @@ nav ul {
 nav li {
   font-size: 1.3em;
   display: inline-block;
-  padding: 10px 30px 15px 30px; }
+  transition: background-color 0.5s ease; }
   nav li:hover {
     background-color: gray;
     cursor: pointer; }
 nav a {
   display: block;
+  padding: 10px 30px 15px 30px;
   font-weight: bold;
   text-decoration: none;
   color: white; }
@@ -62,7 +63,8 @@ article {
   color: white;
   border-radius: 0.3em;
   border: none;
-  padding: 0.5em 1em 0.5em 1em; }
+  padding: 0.5em 1em 0.5em 1em;
+  transition: background-color 0.5s ease; }
   .main-index button:hover {
     cursor: pointer;
     background-color: black; }
