--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 $standard-padding: 2em;
 $primary-color: black;
 $secondary-color: gray;
+$paler-color: rgb(206, 206, 206);
 $highlight-text-color: white;
 $font-family: Arial, Helvetica, sans-serif;
 
@@ -25,6 +26,11 @@ $font-family: Arial, Helvetica, sans-serif;
         cursor: pointer;
         background-color:$primary-color;
     }
+}
+
+@mixin divider-bottom($color) {
+    padding-bottom: 2em;
+    border-bottom: 2px solid $color;
 }
 
 body {
@@ -82,6 +88,8 @@ article {
 }
 
 .main-index {
+    display: block;
+
     section {
         display: flex;
         flex-flow: row wrap;
@@ -89,6 +97,8 @@ article {
     article {
         @include clear-margin-padding;
         width: 100%;
+        padding-bottom: 2em;
+        @include divider-bottom($secondary-color);
     }
     figure {
         @include clear-margin-padding;
@@ -97,11 +107,28 @@ article {
         height: 300px;
         overflow: hidden;
     }
+    .weather {
+        width: 405px;
+        height: 214px;
+    }
     .news-preview-text {
         width: calc(60% - 2em);
     }
     button {
         @include button;
+    }
+}
+
+.classifieds {
+    section {
+        border-bottom: 2px solid $paler-color;
+        padding-top: $standard-padding;
+    }
+    section:last-child {
+        border-bottom: none;
+    }
+    button {
+        margin-bottom: 1em;
     }
 }
 
